Added Persistence common lib & defined base entities for working with db. Keep working on Product microservice.

--- a/src/Product/Product.Application/Product.Application.csproj
+++ b/src/Product/Product.Application/Product.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\AppCommon\AppCommon.csproj" />
+    <ProjectReference Include="..\Product.Domain\Product.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
