--- a/src/Product/Product.Api/Product.Api.csproj
+++ b/src/Product/Product.Api/Product.Api.csproj
@@ -4,10 +4,20 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d9e9bfe7-cb8b-46d3-827f-6487c4729845</UserSecretsId>
   </PropertyGroup>
 
-
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+	</ItemGroup>
+	
+    <ItemGroup>
 		<ProjectReference Include="..\..\Common\Presentation\Presentation.csproj" />
 		<ProjectReference Include="..\Product.Application\Product.Application.csproj" />
 		<ProjectReference Include="..\Product.Domain\Product.Domain.csproj" />
