worked on infrastructure part and db migrations

--- a/src/Product/Product.Api/appsettings.json
+++ b/src/Product/Product.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProductDb": "Server=localhost;Port=5431;Database=test-db;User Id=alex;Password=123;"
+    "ProductDb": "Server=localhost,1433;Database=Product;User Id=sa;Password=p@nT12HenT;Encrypt=false;"
   },
   "DatabaseOptions": {
     "MaxRetryCount": 1,
