--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server
     environment:
-      SA_PASSWORD: V#8L!pQs9o$R
+      SA_PASSWORD: p@nT12HenT
       ACCEPT_EULA: Y
     ports:
       - "1433:1433"
