added logic of creation laptop products

--- a/src/Product/Product.Infrastructure/Product.Infrastructure.csproj
+++ b/src/Product/Product.Infrastructure/Product.Infrastructure.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="BackgroundJobs\" />
+    <Folder Include="Data\Entities\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
