--- a/src/Common/Persistence/Persistence.csproj
+++ b/src/Common/Persistence/Persistence.csproj
@@ -18,8 +18,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Quartz" Version="3.6.2" />
-		<PackageReference Include="Quartz.Extensions.Hosting" Version="3.6.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Quartz" Version="3.8.0" />
+		<PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\AppCommon\AppCommon.csproj" />
