--- a/src/Product/Product.Api/appsettings.json
+++ b/src/Product/Product.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProductDb": "Server=localhost,1433;Database=Product;User Id=sa;Password=p@nT12HenT;Encrypt=false;"
+    "ProductDb": "Server=172.21.0.3,1433;Database=Product;User Id=sa;Password=p@nT12HenT;Encrypt=false;"
   },
   "DatabaseOptions": {
     "MaxRetryCount": 1,
