--- a/src/Product/Product.Api/Dockerfile
+++ b/src/Product/Product.Api/Dockerfile
@@ -1,5 +1,4 @@
-﻿
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
     
