--- a/src/Product/Product.Api/Product.Api.csproj
+++ b/src/Product/Product.Api/Product.Api.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d9e9bfe7-cb8b-46d3-827f-6487c4729845</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -16,6 +19,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 	</ItemGroup>
 	
     <ItemGroup>
@@ -23,6 +27,10 @@
 		<ProjectReference Include="..\Product.Application\Product.Application.csproj" />
 		<ProjectReference Include="..\Product.Domain\Product.Domain.csproj" />
 		<ProjectReference Include="..\Product.Infrastructure\Product.Infrastructure.csproj" />
+    </ItemGroup>
+	
+    <ItemGroup>
+      <Folder Include="PresentationModels\" />
     </ItemGroup>
 
 </Project>
