added approve product endpoint & rabbit mq & logging to seq

--- a/src/Product/Product.Api/appsettings.json
+++ b/src/Product/Product.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "ProductDb": "Server=172.21.0.3,1433;Database=Product;User Id=sa;Password=p@nT12HenT;Encrypt=false;"
   },
+  "MessageBroker": {
+    "Host": "amqp://172.21.0.4:5672",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "DatabaseOptions": {
     "MaxRetryCount": 1,
     "CommandTimeout": 1000,
@@ -9,6 +14,10 @@
     "EnableSensitiveDataLogging": true
   },
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -34,9 +43,10 @@
       },
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:8001" }
+        "Args": { "serverUrl": "http://172.21.0.5:5341" }
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*"
 }
