--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   product.api:
+    container_name: product
     image: ${DOCKER_REGISTRY-}productapi
     build:
       context: .
@@ -10,6 +11,7 @@ services:
       specific-network: 
         ipv4_address: 172.21.0.2
   sqlserver:
+    container_name: mssql
     image: mcr.microsoft.com/mssql/server
     environment:
       SA_PASSWORD: p@nT12HenT
@@ -19,6 +21,32 @@ services:
     networks:
       specific-network: 
         ipv4_address: 172.21.0.3
+  rabbitmq:
+    container_name: rmq
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+      - "8080:15672"
+    healthcheck:
+      test: [ "CMD", "nc", "-z", "localhost", "5672" ]
+      interval: 5s
+      timeout: 15s
+      retries: 1
+    networks:
+      specific-network: 
+        ipv4_address: 172.21.0.4
+  seq:
+    image: datalust/seq:latest
+    container_name: seq
+    environment: 
+      ACCEPT_EULA: Y
+    ports:
+     - "5431:5431" 
+     - "8081:80"
+    networks:
+      specific-network: 
+        ipv4_address: 172.21.0.5
 networks:
   specific-network:
    ipam:
