--- a/src/Common/Persistence/Persistence.csproj
+++ b/src/Common/Persistence/Persistence.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MassTransit" Version="8.1.3" />
+		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
 			<PrivateAssets>all</PrivateAssets>
@@ -18,7 +21,6 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Quartz" Version="3.8.0" />
 		<PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
 	</ItemGroup>
